2008-02-18  Dan Williams  <dcbw@redhat.com>

	Patch from Michael Biebl <biebl@debian.org>

	* editor/nm-editor.desktop
		- Use correct category

2008-02-18  Dan Williams  <dcbw@redhat.com>

	Patch from Michael Biebl <biebl@debian.org>

	* configure.ac
	  po/Makefile.in.in
	  po/LINGUAS
		- use po/LINGUAS

2008-02-12  Dan Williams  <dcbw@redhat.com>

	Release 0.6.5.98  (0.6.6rc1)

2008-02-11  Dan Williams  <dcbw@redhat.com>

	* editor/editor-app.c
		- (populate_model): don't crash on invalid networks, ignore them instead

2008-02-11  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_devices): don't put the Edit Wireless Networks item here
		- (nma_context_menu_create): move the Edit Wireless Networks item here
		- (nma_menu_add_edit_essid_item): remove

2008-02-08  Tambet Ingo  <tambet@gmail.com>

	* src/nm-gconf-wso-wpa-eap.c: Save to gconf which passwords we should have.

2008-01-30  Tambet Ingo  <tambet@gmail.com>

	Sort wireless networks in the list.

	* editor/editor-app.c (sort_networks): Implement.
	(setup_dialog): Add sort function to the list store.
	(populate_model): Sort the model.

2008-01-30  Tambet Ingo  <tambet@gmail.com>

	Implement wireless network editor.

	* Makefile.am: Add editor to build.

	* src/main.c: Remove a compiler warning.

	* src/wso-wep-hex.c (widget_create_func): Ditto.

	* src/wso-wep-ascii.c (widget_create_func): Ditto.

	* src/applet.c (edit_essid_items_selected) 
	(nma_menu_add_edit_essid_item): Implement.
	(nma_menu_add_devices): Add the editor item to the menu.

	* editor/*: Implement.

2008-01-30  Tambet Ingo  <tambet@gmail.com>

        Implement 802.1x wired authentication.

2008-01-29  Tambet Ingo  <tambet@gmail.com>

	* src/nm-gconf-wso.c (real_write_secrets): Don't use a blocking gnome-keyring
	call when writing the secrets, it grabs the X pointer if the menu happens to
	be expanded at the time keyring asks for the master password, deadlocking the
	whole session.
