@@ -2,6 +2,15 @@
 
 	Patch from Michael Biebl <biebl@debian.org>
 
+	* Makefile.am
+		- nm-disconnect-wireless-on-exit.sh is a script, not data
+		- Install the autostart file in the correct place since there's a spec
+			for it now
+
+2008-02-18  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Michael Biebl <biebl@debian.org>
+
 	* editor/nm-editor.desktop
 		- Use correct category
 
